# centroid-rna-package

./: .gitignore  .hgignore  AUTHORS  CMakeLists.txt  ChangeLog  Dockerfile  Makefile.am  Makefile.in  ProjectHome.md  README.md  README.rd  aclocal.m4  config.h.in  configure  configure.ac  contrafold.patch  contrafold_v2_02.patch
.devcontainer/: Dockerfile  devcontainer.json
deamon/: Makefile.am  centroidfold_deamon.cpp  configure.ac
perl/: Makefile.PL  README.md  README.rd  centroid_fold.i  centroid_fold_wrap.cxx  test.pl
python/: CentroidFold.py  README.md  README.rd  centroid_fold.i  centroid_fold_wrap.cxx  setup.py  test.py
ruby/: Makefile  README.md  README.rd  centroid_fold.i  centroid_fold_wrap.cxx  extconf.rb  test.rb
src/: CMakeLists.txt  Makefile.am  Makefile.in  aln.cpp  aln.h  bp.cpp  bp.h  capi.cpp  capi.h  cbpd.cpp  centroid.cpp  centroid.h  centroid_alifold.cpp  centroid_fold.cpp  centroid_fold.h  centroid_fold_interface.cpp  centroid_fold_interface.h  centroid_homfold.cpp  contrafold.h  contrafold.rb  contrafold_m.rb  csci.cpp  cyktable.h  diana.cpp  diana.h  fa.cpp  fa.h  folding_engine.cpp  folding_engine.h  iupac.cpp  iupac.h  log_prob.cpp  main.cpp  mea.cpp  mea.h  naview.c  ps_plot.cpp  ps_plot.h  rule.h  simfold.rb  (+3 more)
src/contrafold/: CMakeLists.txt  Config.hpp  InferenceEngine.hpp  InferenceEngine.ipp  LogSpace.hpp  Makefile.am  Makefile.in  ParameterManager.hpp  ParameterManager.ipp  SStruct.cpp  SStruct.hpp  Utilities.cpp  Utilities.hpp  Utilities.ipp  contrafold.h  rand.h  wrapper.cpp
src/contralign/: CMakeLists.txt  Config.hpp  Contralign.cpp  Defaults.ipp  InferenceEngine.hpp  InferenceEngine.ipp  LogSpace.hpp  Makefile.am  Makefile.in  MultiSequence.cpp  MultiSequence.hpp  ParameterManager.hpp  ParameterManager.ipp  Progressive.hpp  Progressive.ipp  SStruct.cpp  SStruct.hpp  Sequence.cpp  Sequence.hpp  SparseMatrix.hpp  SparseMatrix.ipp  Tree.cpp  Tree.hpp  Tree.ipp  Utilities.cpp  Utilities.hpp  Utilities.ipp  contralign.h  wrapper.cpp
src/contralign/.deps/: MultiSequence.Po  Sequence.Po  Utilities.Po  wrapper.Po
src/engine/: alifold.cpp  alifold.h  aux.cpp  aux.h  averaged.cpp  averaged.h  boltzmann_param.c  boltzmann_param.h  contrafold.cpp  contrafold.h  contrafoldhom.cpp  contrafoldhom.h  contrafoldm.cpp  contrafoldm.h  mccaskill.cpp  mccaskill.h  mccaskillhom.cpp  mccaskillhom.h  mixture.cpp  mixture.h  new_param.c  new_param.h  pfold.cpp  pfold.h
src/probconsRNA/: CMakeLists.txt  Defaults.h  FileBuffer.h  Makefile.am  Makefile.in  MultiSequence.h  ProbabilisticModel.h  SafeVector.h  ScoreType.h  Sequence.h  SparseMatrix.h  probcons.h  wrapper.cpp
src/probconsRNA/.deps/: CompareToRef.Po  FixRef.Tpo  MakeGnuPlot.Po  ProjectPairwise.Po  wrapper.Po
