noinst_LIBRARIES = libcontrafold.a

libcontrafold_a_SOURCES = \
	contrafold.h wrapper.cpp \
	SStruct.cpp SStruct.hpp \
	Utilities.cpp Utilities.hpp Utilities.ipp \
	ParameterManager.ipp ParameterManager.hpp \
	InferenceEngine.ipp InferenceEngine.hpp \
	Defaults.ipp Config.hpp LogSpace.hpp \
	rand.h
